--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                 <div class="card" style="width: 100%;">
                 <div class="card-body">
                   <h5 class="card-title">his journey to the goal</h5>
-                  <p class="card-text"> </p>
+                  <p class="card-text"> He found Drake a role on the Canadian teen drama series Degrassi: The Next Generation, in which Drake portrayed Jimmy Brooks a basketball star who became physically disabled after he was shot by a classmate. When asked about his early acting career, Drake replied, "My mother was very sick. We were very poor, like broke. The only money I had coming in was [from] Canadian TV."According to showrunners Linda Schuyler and Stephen Stohn, Drake regularly arrived late on set after spending nights recording music. To prevent this, Schuyler claimed Drake struck an agreement with the set's security guards to gain entry to the set after recording to be allowed to sleep in a dressing room. Drake's first recorded song, "Do What You Do", appeared on The N Soundtrack, which was released by The N (the night-time block for Noggin), as it was the network that Degrassi was airing on in the United States,Being musically inspired by Jay-Z and Clipse, Drake self-released his debut mixtape, Room for Improvement 
+
+                  </p>
                 </div>
                 
 
@@ -45,6 +47,6 @@
                     <div class="card" style="width: 100%;">
                     <div class="card-body">
                       <h5 class="card-title">motivation </h5>
-                      <p class="card-text"> </p>
+                      <p class="card-text">“Know life is just a game in which the cards are facing down. Im in the world where things are taken, never given how long they choose to love you will never be your decision.”</p>
                     </div>
                     
